# vehicle-detection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  checkpoints.dvc  main.py  pyproject.toml  stanford_cars_dataset.dvc
.dvc/: config
configs/: config.yaml  data.yaml
configs/data/: data.yaml  stanford_cars.yaml
configs/model/: fasterrcnn.yaml
configs/train/: default.yaml
mlruns/0/: meta.yaml
mlruns/288934813798707077/: meta.yaml
mlruns/288934813798707077/332022e78a5d4500bd34440830bc9bfe/: meta.yaml
mlruns/288934813798707077/99b1e7aa96ba4aa7b2161493278c86ff/: meta.yaml
mlruns/288934813798707077/99b1e7aa96ba4aa7b2161493278c86ff/metrics/: lr-AdamW
mlruns/288934813798707077/a25069888d7042fba8fdf72762de14f7/: meta.yaml
mlruns/288934813798707077/a25069888d7042fba8fdf72762de14f7/metrics/: epoch  lr-AdamW  train_loss  train_loss_box_reg  train_loss_classifier  train_loss_objectness  train_loss_rpn_box_reg
mlruns/288934813798707077/a25069888d7042fba8fdf72762de14f7/params/: git_commit
mlruns/288934813798707077/e9a64c08b87e4c3399bf4e8f780e0fd1/: meta.yaml
mlruns/288934813798707077/e9a64c08b87e4c3399bf4e8f780e0fd1/tags/: mlflow.source.git.commit  mlflow.source.name
outputs/2025-12-29/20-46-00/.hydra/: config.yaml  hydra.yaml
outputs/2025-12-29/20-47-40/.hydra/: hydra.yaml  overrides.yaml
vehicle_detection/: __init__.py  commands.py  constants.py  data.py  infer.py  model.py  train.py
vehicle_detection/data/: __init__.py  dataset.py  download.py
vehicle_detection/models/: __init__.py  detector.py
(+16 files in other folders)
